test_scores/negative_dimers/features/P51116.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P51116.pkl.xz